# TheSingularityIsUponUs

./: .env.example  .gitignore  CHANGELOG.md  DEVELOPER.md  IMPROVEMENTS.md  LICENSE  README.md  SECURITY.md  SECURITY_REVIEW_SUMMARY.md  __init__.py  cli.py  config.py  core.py  prompts.txt  pyproject.toml  ruff.toml  security.py  test_security.py  utils.py  validation_report.txt
operator_prompts/: assess.md  assess_balanced.md  constitution.md  constitution_balanced.md  generate_prompts.md  generate_prompts_balanced.md  judge.md  roadmap.md  roadmap_balanced.md
release_flow/: __init__.py  __main__.py  cli.py  config.py  core.py  judge.py
tests/: __init__.py  test_cli.py  test_config.py  test_core.py  test_operator.py  test_utils.py
